@@ -16,6 +16,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11700: mailbox proxy object close methods can now be called multiple
+  times without error, and _ProxyFile now closes the wrapped file.
+
 - Issue #12133: AbstractHTTPHandler.do_open() of urllib.request closes the HTTP
   connection if its getresponse() method fails with a socket error. Patch
   written by Ezio Melotti.
